[bugfix] | intersection observer does not activate last section on third menu item click - sticky filters behind header nav [access] | Filters all button (title should display same text as button) [ux] | Xp slider - scroll to slider top after next/prev btn have been clicked [opti] | activeSection composable

--- a/assets/styles/experiences.css
+++ b/assets/styles/experiences.css
@@ -4,7 +4,7 @@
         top: 0;
         padding: 2rem 0;
         margin-top: 2rem;
-        z-index: 2;
+        /* z-index: 2; */
         &::before {
             content: "";
             position: absolute;
@@ -28,6 +28,7 @@
     }
     #XpSwiper {
         position: relative;
+        z-index: -1;
         &.loading {
             &::before,
             .slide-item {
