--- a/assets/styles/template.css
+++ b/assets/styles/template.css
@@ -18,6 +18,9 @@
         z-index: -1;
     }
 }
+.section:target {
+    scroll-margin-top: -0.1rem;
+}
 /************************/
 /*** heading - title ***/
 /************************/
